minimize resource loading
remove discord bot

--- a/src/login.html
+++ b/src/login.html
@@ -13,10 +13,10 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
-    <script src="form.min.js"></script>
+    <script src="js/form.min.js"></script>
     <style>
         body {
             text-align: center;
