--- a/src/main.html
+++ b/src/main.html
@@ -13,43 +13,11 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/grid.min.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest" />
     <link rel="apple-touch-startup-image" href="public/launch.png">
-    <script src="form.min.js"></script>
-    <style>
-        .sg {
-            grid-column-gap: 10px;
-            grid-row-gap: 10px;
-            aspect-ratio: 3/1;
-            -webkit-column-gap: 10px;
-            column-gap: 10px;
-            display: grid;
-            grid-template-columns: repeat(9, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            row-gap: 10px;
-            width:100%;
-        }
-
-        .sg-c {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            aspect-ratio: 1/1;
-            border-radius: 5px;
-            font-size: 2rem;
-            margin: 2px;
-            padding: 2px;
-            width:100%;
-            background-color: #ddd;
-            text-align: center;
-            cursor: pointer;
-        }
-
-        .sg-c[data-coop=true] {
-            background-color: #bbb;
-        }
-    </style>
+    <script src="js/form.min.js"></script>
 </head>
 
 <body class="dark-mode">
@@ -191,171 +159,7 @@
     </form>
     <input type="file" name="jsonScoutFile" accept=".scout" style="display: none;" id="jsonScoutFile" disabled="disabled">
     <br><br>
-    <script>
-        //data validation
-        var allTeams = [];
-
-        async function getEventTeams() {
-            const xhr = new XMLHttpRequest();
-            xhr.open("GET", `/api/events/${document.getElementById('eventCode').value}/teams`, true);
-            xhr.withCredentials = true;
-
-            xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                console.log("200 ok")
-                console.log(xhr.responseText)
-                allTeams = (xhr.responseText).split(",")
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-            } else if (xhr.status === 403) {
-                console.log("403 failure")
-            } else {
-                console.log("awaiting response")
-            }
-            }
-
-            xhr.send()
-        }
-
-        getEventTeams()
-
-        document.getElementById('eventCode').addEventListener('change', async function(){console.log(getEventTeams()); console.log(allTeams)});
-
-        document.getElementById('validateTeamInput').addEventListener('input', function(event){
-            console.log("event!")
-            if (allTeams.includes(document.getElementById('validateTeamInput').value)) {
-                document.getElementById('invalidTeamInput').style.display = "none";
-                document.getElementById('submitButton').removeAttribute("disabled");
-            } else {
-                document.getElementById('invalidTeamInput').style.display = "inherit";
-                document.getElementById('submitButton').setAttribute("disabled", "disabled");
-            }
-        });
-
-        document.getElementById('validateLength').addEventListener('input', function(event){
-            console.log("event!")
-            if ((document.getElementById('validateLength').value).length <= 4) {
-                document.getElementById('tooLong').style.display = "none";
-                document.getElementById('submitButton').removeAttribute("disabled");
-            } else {
-                document.getElementById('tooLong').style.display = "inherit";
-                document.getElementById('submitButton').setAttribute("disabled", "disabled");
-            }
-        });
-        //end data validation
-
-        //grid orientation reminder
-        if (window.innerHeight > window.innerWidth) {
-            document.getElementById('landscapeReminder').style.display = "inline";
-        }
-
-        window.addEventListener('resize', function(event){
-            if(window.innerHeight > window.innerWidth){
-                document.getElementById('landscapeReminder').style.display = "inline";
-            } else {
-                document.getElementById('landscapeReminder').style.display = "none";
-            }
-        });
-        //end grid orientation reminder
-
-        //grid script
-        function getAllCells() {
-            var cells = [];
-            for(let j = 1; j < 4; j++) {
-                for(let i = 1; i < 10; i++) {
-                    cells.push(document.getElementById('sgc_' + j + '_' + i))
-                }
-            }
-            return cells;
-        }
-        var sgCellStatus = [
-            0, 0, 0,  0, 0, 0,  0, 0, 0,
-            0, 0, 0,  0, 0, 0,  0, 0, 0,
-            0, 0, 0,  0, 0, 0,  0, 0, 0
-        ];
-        const allCells = getAllCells();
-        function processCellClick(dataNum, numset) {
-            sgCellStatus[Number(dataNum)] = numset;
-            document.getElementById('griddata').value = sgCellStatus.join('');
-            console.log(document.getElementById('griddata').value);
-        }
-        function setGray(that) {
-            that.innerText = "";
-            if (that.getAttribute("data-coop") == "true") {
-                that.style.background = "#bbb";
-            } else {
-                that.style.background = "#ddd";
-            }
-            that.setAttribute("data-state", "0")
-            processCellClick(that.getAttribute("data-num"), 0);
-        }
-        function setSingleCube(that) {
-            that.style.background = "#a216a2";
-            that.innerText = "";
-            that.setAttribute("data-state", "1")
-            processCellClick(that.getAttribute("data-num"), 1);
-        }
-        function setSingleCone(that) {
-            that.style.background = "#ff0";
-            that.innerText = "";
-            that.setAttribute("data-state", "2")
-            processCellClick(that.getAttribute("data-num"), 2);
-        }
-        function setDoubleCube(that) {
-            that.style.background = "#a216a2";
-            that.style.color = "#ff0";
-            that.innerText = "2";
-            that.setAttribute("data-state", "3")
-            processCellClick(that.getAttribute("data-num"), 3);
-        }
-        function setDoubleCone(that) {
-            that.style.background = "#ff0";
-            that.style.color = "#a216a2";
-            that.innerText = "2";
-            that.setAttribute("data-state", "5")
-            processCellClick(that.getAttribute("data-num"), 4);
-        }
-        for (var i = 0; i < allCells.length; i += 1) {
-            allCells[i].addEventListener('click', function (e) {
-                if (this.getAttribute("data-gp") === "cube") {
-                    if (this.getAttribute("data-state") === "0") {
-                        setSingleCube(this);
-                    } else if (this.getAttribute("data-state") === "1") {
-                        setDoubleCube(this);
-                    } else {
-                        setGray(this);
-                    }
-                } else if (this.getAttribute("data-gp") === "cone") {
-                    if (this.getAttribute("data-state") === "0") {
-                        setSingleCone(this);
-                    } else if (this.getAttribute("data-state") === "2") {
-                        setDoubleCone(this);
-                    } else {
-                        setGray(this);
-                    }
-                } else if (this.getAttribute("data-gp") === "h") {
-                    if (this.getAttribute("data-state") === "1") {
-                        setSingleCone(this);
-                    } else if (this.getAttribute("data-state") === "0") {
-                        setSingleCube(this);
-                    } else if (this.getAttribute("data-state") === "3") {
-                        setDoubleCone(this);
-                    } else if (this.getAttribute("data-state") === "2") {
-                        setDoubleCube(this);
-                    } else {
-                        setGray(this);
-                    }
-                }
-            });
-        }
-        //end grid script
-    </script>
+    <script src="js/main_form_client.min.js" type="text/javascript"></script>
 </body>
 
 </html>
