--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -11,28 +11,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.min.js"></script>
-    <style>
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-            border-top: rgba(35,35,35,0);
-            border-left: rgba(35,35,35,0);
-            border-right: rgba(35,35,35,0);
-            border-bottom: #fff;
-            border-style: dotted;
-            border-width: 0.25vh;
-        }
-        a:hover,a:active {
-            color: #fff;
-        }
-        body {
-            text-align: center;
-        }
-    </style>
+    <script src="js/form.min.js"></script>
 </head>
 
 <body class="dark-mode">
@@ -57,93 +39,7 @@
         </form>
         <br><br>
     </div>
-    <script>
-        const waitMs = ms => new Promise((res) => {setTimeout(res, ms)});
-        function goToHome() {
-            window.location.href = "/";
-        }
-        window.allTeams = [];
-        window.scoutedTeams = [];
-        function getAllTeams() {
-            eventCode = document.getElementById("eventCode").value
-            document.getElementById("viewTeamsButton").innerHTML = "Requesting Data...";
-            const xhr = new XMLHttpRequest();
-            xhr.open("GET", `/api/events/${eventCode}/teams`, true);
-            xhr.withCredentials = true;
-
-            xhr.onreadystatechange = async () => {
-                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                    console.log("200 ok")
-                    console.log(xhr.responseText)
-                    window.allTeams = xhr.responseText.split(",")
-                    console.log(getDifference())
-                    document.getElementById("eventLabel").style.display = "none"
-                    document.getElementById("eventCode").insertAdjacentHTML("afterend", `<div id="unscouted"><br><span>To Scout: </span><br>${getDifference().join("<br>")}</div>`);
-                    document.getElementById("eventCode").style.display = "none"
-                    document.getElementById("viewTeamsButton").innerHTML = "Done!";
-                    return 0;
-                } else if (xhr.status === 401) {
-                    console.log("401 failure")
-                    document.getElementById("viewTeamsButton").innerHTML = "401 Unauthorized";
-                    await waitMs(1000);
-                    window.location.href = "/login";
-                } else if (xhr.status === 400) {
-                    console.log("400 failure")
-                    document.getElementById("viewTeamsButton").innerHTML = "400 Bad Request";
-                } else if (xhr.status === 500) {
-                    console.log("500 failure")
-                    document.getElementById("viewTeamsButton").innerHTML = "500 Internal Server Error";
-                } else {
-                    console.log("awaiting response")
-                    document.getElementById("viewTeamsButton").innerHTML = "Downloading Data...";
-                }
-            }
-
-            xhr.send()
-        }
-
-        function getScoutedTeams() {
-            eventCode = document.getElementById("eventCode").value
-            document.getElementById("viewTeamsButton").innerHTML = "Requesting Data...";
-            const xhr = new XMLHttpRequest();
-            xhr.open("GET", `/api/events/${eventCode}/pitscoutedteams`, true);
-            xhr.withCredentials = true;
-
-            xhr.onreadystatechange = async () => {
-                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                    console.log("200 ok")
-                    console.log(xhr.responseText)
-                    window.scoutedTeams = xhr.responseText.split(",")
-                    getAllTeams()
-                    return 0;
-                } else if (xhr.status === 401) {
-                    console.log("401 failure")
-                    document.getElementById("viewTeamsButton").innerHTML = "401 Unauthorized";
-                    await waitMs(1000);
-                    window.location.href = "/login";
-                } else if (xhr.status === 400) {
-                    console.log("400 failure")
-                    document.getElementById("viewTeamsButton").innerHTML = "400 Bad Request";
-                } else if (xhr.status === 500) {
-                    console.log("500 failure")
-                    document.getElementById("viewTeamsButton").innerHTML = "500 Internal Server Error";
-                } else {
-                    console.log("awaiting response")
-                    document.getElementById("viewTeamsButton").innerHTML = "Downloading Data...";
-                }
-            }
-
-            xhr.send()
-        }
-
-        function getDifference() {
-            return window.allTeams.filter(teamNumber => !window.scoutedTeams.includes(teamNumber))
-        }
-
-        function getUnscoutedTeams() {
-            getScoutedTeams();
-        }
-    </script>
+    <script src="js/topitscout_client.min.js" type="text/javascript"></script>
 </body>
 
 </html>
