--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -11,28 +11,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.min.js"></script>
+    <script src="js/form.min.js"></script>
     <style>
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-            border-top: rgba(35,35,35,0);
-            border-left: rgba(35,35,35,0);
-            border-right: rgba(35,35,35,0);
-            border-bottom: #fff;
-            border-style: dotted;
-            border-width: 0.25vh;
-        }
-        a:hover,a:active {
-            color: #fff;
-        }
-        body {
-            text-align: center;
-        }
-
         canvas {
             background-color: #121212;
             image-rendering: crisp-edges;
