--- a/src/denied.html
+++ b/src/denied.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
     <style>
         body {
             vertical-align: middle;
