--- a/src/notes.html
+++ b/src/notes.html
@@ -1,218 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Team Notes - 766 Scouting</title>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="English">
-    <meta name="robots" content="index, follow">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Scouting">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest" />
-    <link rel="apple-touch-startup-image" href="public/launch.png">
-    <script src="form.min.js"></script>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
-    <style>
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-            border-bottom: #fff;
-            color: inherit
-        }
-        body {
-            text-align: center;
-        }
-        .editorjs {
-            all: unset !important;
-        }
-    </style>
-</head>
-
-<body class="dark-mode">
-    <script>
-        themeHandle()
-    </script>
-    <div class="container" id="search" style="display: flex;">
-        <div class="maincontent">
-            <h1 style="font-family: 'raleway-300'">2023 Notes<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
-            <h3>View & Edit Note</h3>
-            <fieldset id="searchContainer">
-                <label id="ecodeLabel">Event Code: <br></label>
-                <select name="event" id="eventCode">
-                    <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                    <option value="WOOD" selected>WOOD - CalGames</option>
-                </select><br><br>
-                <label id="teamNumLabel"><br><br>Team Number: </label><br>
-                <input type="tel" id="teamNumber">
-                <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewNoteButton" onclick="getNote()">View</button><br>
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button>
-            </fieldset>
+    <head>
+        <title>Team Notes - 766 Scouting</title>
+        <meta charset="utf-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="language" content="English">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Scouting">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <link rel="stylesheet" href="css/float.min.css" type="text/css">
+        <link rel="manifest" href="/app.webmanifest" />
+        <link rel="apple-touch-startup-image" href="public/launch.png">
+        <script src="js/form.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css" integrity="sha384-07UbSXbd8HpaOfxZsiO6Y8H1HTX6v0J96b5qP6PKSpYEuSZSYD4GFFHlLRjvjVrL" crossorigin="anonymous">
+        <style>
+            a,a:visited {
+                text-align: center;
+                text-decoration: none;
+                font-size: 6vh;
+                border-bottom: #fff;
+                color: inherit
+            }
+            body {
+                text-align: center;
+            }
+            .editorjs {
+                all: unset !important;
+            }
+        </style>
+    </head>
+    <body class="dark-mode">
+        <script>
+            themeHandle()
+        </script>
+        <div class="container" id="search" style="display: flex;">
+            <div class="maincontent">
+                <h1 style="font-family: 'raleway-300'">2023 Notes<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+                <h3>View & Edit Note</h3>
+                <fieldset id="searchContainer">
+                    <label id="ecodeLabel">Event Code: <br></label>
+                    <select name="event" id="eventCode">
+                        <option value="CADA">CADA - Sacramento Regional</option>
+                        <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                        <option value="WOOD" selected>WOOD - CalGames</option>
+                    </select><br><br>
+                    <label id="teamNumLabel"><br><br>Team Number: </label><br>
+                    <input type="tel" id="teamNumber">
+                    <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewNoteButton" onclick="getNote()">View</button><br>
+                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button>
+                </fieldset>
+            </div>
         </div>
-    </div>
-    <div id="edit" style="display: none;">
-        <div id="editor" style="display: none;"></div>
-        <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="saveNoteButton" onclick="saveNote()">Save</button><br>
-        <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button></div>
-    </div>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
-    <script>
-        var quill = new Quill('#editor', {
-            theme: 'snow'
-        });
-
-        window.currentEvent = 0;
-        window.currentTeam = 0;
-
-        document.getElementById("editor").style.display = "none";
-
-        const waitMs = ms => new Promise(res => setTimeout(res, ms));
-        function goToHome() {
-            window.location.href = "/";
-        }
-
-        async function getNote() {
-            eventCode = document.getElementById("eventCode").value
-            teamNumber = document.getElementById("teamNumber").value
-            window.currentEvent = eventCode
-            window.currentTeam = teamNumber
-
-            document.getElementById("viewNoteButton").innerHTML = "Requesting Data...";
-            const xhr = new XMLHttpRequest();
-            xhr.open("GET", `/api/notes/${eventCode}/${teamNumber}/getNotes`, true);
-            xhr.withCredentials = true;
-
-            xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                    console.log("200 ok")
-                    console.log(xhr.responseText)
-                    document.getElementById("viewNoteButton").innerHTML = "Rendering View...";
-                    document.getElementById("searchContainer").style.display = "none";
-                    document.getElementById("edit").style.display = "inherit";
-                    document.getElementById("editor").style.display = "inherit";
-                    document.getElementById("viewNoteButton").innerHTML = "View";
-                    quill.setContents(JSON.parse(xhr.responseText))
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                document.getElementById("viewNoteButton").innerHTML = "401 Unauthorized";
-                await waitMs(1000);
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-                document.getElementById("viewNoteButton").innerHTML = "500 Internal Server Error";
-                if (xhr.responseText == "none") {
-                        const newxhr = new XMLHttpRequest();
-                        newxhr.open("GET", `/api/notes/${eventCode}/${teamNumber}/createNote`, true);
-                        newxhr.withCredentials = true;
-
-                        newxhr.onreadystatechange = async () => {
-                        if (newxhr.readyState === XMLHttpRequest.DONE && newxhr.status === 200) {
-                            getNote()
-                        } else if (newxhr.status === 401) {
-                            console.log("401 failure")
-                            document.getElementById("viewNoteButton").innerHTML = "401 Unauthorized";
-                            await waitMs(1000);
-                            window.location.href = "/login";
-                        } else if (newxhr.status === 400) {
-                            console.log("400 failure")
-                            document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
-                        } else if (newxhr.status === 500) {
-                            console.log("500 failure")
-                            document.getElementById("viewNoteButton").innerHTML = "500 Internal Server Error";
-                        } else {
-                            console.log("awaiting response")
-                            document.getElementById("viewNoteButton").innerHTML = "Downloading Data...";
-                        }
-                        }
-
-                        newxhr.send()
-                }
-            } else if (xhr.status === 403) {
-                if (xhr.responseText == "none") {
-                        const newxhr = new XMLHttpRequest();
-                        newxhr.open("GET", `/api/notes/${eventCode}/${teamNumber}/createNote`, true);
-                        newxhr.withCredentials = true;
-
-                        newxhr.onreadystatechange = async () => {
-                        if (newxhr.readyState === XMLHttpRequest.DONE && newxhr.status === 200) {
-                            getNote()
-                        } else if (newxhr.status === 401) {
-                            console.log("401 failure")
-                            document.getElementById("viewNoteButton").innerHTML = "401 Unauthorized";
-                            await waitMs(1000);
-                            window.location.href = "/login";
-                        } else if (newxhr.status === 400) {
-                            console.log("400 failure")
-                            document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
-                        } else if (newxhr.status === 500) {
-                            console.log("500 failure")
-                            document.getElementById("viewNoteButton").innerHTML = "500 Internal Server Error";
-                        } else {
-                            console.log("awaiting response")
-                            document.getElementById("viewNoteButton").innerHTML = "Downloading Data...";
-                        }
-                        }
-
-                        newxhr.send()
-                }
-            } else {
-                console.log("awaiting response")
-                document.getElementById("viewNoteButton").innerHTML = "Downloading Data...";
-            }
-            }
-
-            xhr.send()
-        }
-
-        function saveNote() {
-            var newContent = JSON.toString(quill.getContents());
-
-            eventCode = document.getElementById("eventCode").value
-            teamNumber = document.getElementById("teamNumber").value
-            document.getElementById("saveNoteButton").innerHTML = "Saving Data...";
-            const xhr = new XMLHttpRequest();
-            xhr.open("POST", `/api/notes/${eventCode}/${teamNumber}/updateNotes`, true);
-            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-            xhr.withCredentials = true;
-
-            xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                console.log("200 ok")
-                console.log(xhr.responseText)
-                document.getElementById("saveNoteButton").innerHTML = "Rendering View...";
-                document.getElementById("saveNoteButton").innerHTML = "Saved!";
-                await waitMs(1000)
-                document.getElementById("saveNoteButton").innerHTML = "Save";
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                document.getElementById("viewNoteButton").innerHTML = "401 Unauthorized";
-                await waitMs(1000);
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-                document.getElementById("viewNoteButton").innerHTML = "500 Internal Server Error";
-            } else {
-                console.log("awaiting response")
-                document.getElementById("viewNoteButton").innerHTML = "Downloading Data...";
-            }
-            }
-
-            xhr.send('save=' + JSON.stringify(quill.getContents()));
-        }
-    </script>
-</body>
-
+        <div id="edit" style="display: none;">
+            <div id="editor" style="display: none;"></div>
+            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="saveNoteButton" onclick="saveNote()">Save</button><br>
+            <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button></div>
+        </div>
+        <script src="https://cdn.quilljs.com/1.3.6/quill.js" integrity="sha384-0zm5QqnR2gL4GY5AwreU3xp5AEGWqkdbamrRLeXwWwepp4JqmPRawLJFD8Cm802W" crossorigin="anonymous"></script>
+        <script src="js/notes_client.min.js" type="text/javascript"></script>
+    </body>
 </html>
