--- a/src/scouts.html
+++ b/src/scouts.html
@@ -11,49 +11,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
+    <link rel="stylesheet" href="css/table.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.min.js"></script>
-    <style>
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-            border-top: rgba(35,35,35,0);
-            border-left: rgba(35,35,35,0);
-            border-right: rgba(35,35,35,0);
-            border-bottom: #fff;
-            border-style: dotted;
-            border-width: 0.25vh;
-        }
-        a:hover,a:active {
-            color: #fff;
-        }
-        body {
-            text-align: center;
-        }
-        table {
-            border-collapse:separate;
-            border: solid var(--gameFlairColor) 1px;
-            border-radius: 6px;
-        }
-
-        td, th {
-            border-left: solid var(--gameFlairColor) 1px;
-            border-top: solid var(--inputColorSelected) 1px;
-        }
-
-        th {
-            background-color: var(--transparent);
-            color: var(--textColor);
-            border-top: none;
-            border-bottom: solid var(--gameFlairColor) 1px;
-        }
-
-        td:first-child, th:first-child {
-            border-left: none;
-        }
-    </style>
+    <script src="js/form.min.js"></script>
 </head>
 
 <body class="dark-mode" onload="getTeamRanks()">
@@ -90,47 +52,7 @@
             <br><br>
         </div>
     </div>
-    <script>
-        const waitMs = ms => new Promise(res => setTimeout(res, ms));
-        function goToHome() {
-            window.location.href = "/";
-        }
-        async function getTeamRanks() {
-            document.getElementById("viewScoutsButton").innerHTML = "Requesting Data...";
-            const xhr = new XMLHttpRequest();
-            xhr.open("GET", `/api/scouts`, true);
-            xhr.withCredentials = true;
-
-            xhr.onreadystatechange = async () => {
-            if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                console.log("200 ok")
-                console.log(xhr.responseText)
-                document.getElementById("viewScoutsButton").innerHTML = "Rendering View...";
-                document.getElementById("preInsert").insertAdjacentHTML("afterend", xhr.responseText)
-                document.getElementById("search").style.display = "none";
-                document.getElementById("results").style.display = "flex";
-                document.getElementById("eventCodeDisplay").innerHTML = `Top scouts`;
-                document.getElementById("viewScoutsButton").innerHTML = "Reload Data";
-            } else if (xhr.status === 401) {
-                console.log("401 failure")
-                document.getElementById("viewScoutsButton").innerHTML = "401 Unauthorized";
-                await waitMs(1000);
-                window.location.href = "/login";
-            } else if (xhr.status === 400) {
-                console.log("400 failure")
-                document.getElementById("viewScoutsButton").innerHTML = "400 Bad Request";
-            } else if (xhr.status === 500) {
-                console.log("500 failure")
-                document.getElementById("viewScoutsButton").innerHTML = "500 Internal Server Error";
-            } else {
-                console.log("awaiting response")
-                document.getElementById("viewScoutsButton").innerHTML = "Downloading Data...";
-            }
-            }
-
-            xhr.send()
-        }
-    </script>
+    <script src="js/scouts_client.min.js" type="text/javascript"></script>
 </body>
 
 </html>
