--- a/src/settings.html
+++ b/src/settings.html
@@ -1,86 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Settings - 766 Scouting</title>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="language" content="English">
-    <meta name="robots" content="index, follow">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Scouting">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest" />
-    <link rel="apple-touch-startup-image" href="public/launch.png">
-    <script src="form.min.js"></script>
-    <style>
-        body {
-            text-align: center;
-        }
-    </style>
-</head>
-
-<body class="dark-mode">
-    <script>
-        themeHandle()
-    </script>
-    <div class="container">
-        <div class="dummy">
-            <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h2>Settings</h2><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()">
-                <p>Switch Theme</p>
-            </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'">
-                <p>Log Out</p>
-            </button><br><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='/'">
-                <p>Back</p>
-            </button><br><br><br><br>
-            <!--<button style="background-color: rgba(0,0,0,0); border: none; color: #f00; padding: 0px; width: 75%;" onclick="updateSW()">
-                <p>Update SW</p>
-            </button>-->
-            <button style="background-color: rgba(0,0,0,0); border: none; color: #f00; padding: 0px; width: 75%;" onclick="window.location.href='clearCookies'">
-                <p>Reset Cookies</p>
-            </button>
-        </div>
-    </div>
-    <script>
-        async function updateSW() {
-            if(window.navigator && navigator.serviceWorker) {
-                reg = await navigator.serviceWorker.ready;
-                reg.update();
-            }
-        }
-        function getThemeCookieS() {
-            var allcookies = document.cookie.split(';');
-            for (var i = 0; i < allcookies.length; i++) {
-                var cookie = allcookies[i].trim();
-                if ((cookie.indexOf(name)) == 0 && (cookie.substr(name.length)).includes("4c454a5b1bedf6a1")) {
-                    return cookie.substr(name.length).split('=')[1]
-                }
-            }
-        }
-        function changeTheme() {
-            let theme = getThemeCookieS();
-            switch (theme) {
-                case "light":
-                    document.cookie = "4c454a5b1bedf6a1=dark; expires=Fri, 31 Dec 9999 23:59:59 GMT; Secure; SameSite=Lax";
-                break;
-                case "dark":
-                case undefined:
-                    document.cookie = "4c454a5b1bedf6a1=light; expires=Fri, 31 Dec 9999 23:59:59 GMT; Secure; SameSite=Lax";
-                break;
-                default:
-                    document.cookie = "4c454a5b1bedf6a1=dark; expires=Fri, 31 Dec 9999 23:59:59 GMT; Secure; SameSite=Lax";
-            }
+    <head>
+        <title>Settings - 766 Scouting</title>
+        <meta charset="utf-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="language" content="English">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Scouting">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <link rel="stylesheet" href="css/float.min.css" type="text/css">
+        <link rel="manifest" href="/app.webmanifest" />
+        <link rel="apple-touch-startup-image" href="public/launch.png">
+        <script src="js/form.min.js"></script>
+        <style>body {text-align: center;}</style>
+    </head>
+    <body class="dark-mode">
+        <script>
             themeHandle()
-        }
-    </script>
-</body>
-
+        </script>
+        <div class="container">
+            <div class="dummy">
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h2>Settings</h2><br>
+                <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()">
+                    <p>Switch Theme</p>
+                </button><br><br>
+                <button style="background-color: rgba(0,0,0,0); border: 1px solid #f00; color: #f00; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'">
+                    <p>Log Out</p>
+                </button><br><br><br>
+                <button style="background-color: rgba(0,0,0,0); border: 1px solid gray; color: gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='/'">
+                    <p>Back</p>
+                </button><br><br><br><br>
+                <button style="background-color: rgba(0,0,0,0); border: none; color: #f00; padding: 0px; width: 75%;" onclick="window.location.href='clearCookies'">
+                    <p>Reset Cookies</p>
+                </button>
+            </div>
+        </div>
+        <script src="js/client_settings.min.js" type="text/javascript"></script>
+    </body>
 </html>
