--- a/src/spin.html
+++ b/src/spin.html
@@ -10,29 +10,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
-    <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/float.min.css" type="text/css">
+    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
     <link rel="stylesheet" href="assets/spin.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.min.js"></script>
+    <script src="js/form.min.js"></script>
     <style>
-        a,a:visited {
-            text-align: center;
-            text-decoration: none;
-            font-size: 6vh;
-            border-top: rgba(35,35,35,0);
-            border-left: rgba(35,35,35,0);
-            border-right: rgba(35,35,35,0);
-            border-bottom: #fff;
-            border-style: dotted;
-            border-width: 0.25vh;
-        }
-        a:hover,a:active {
-            color: #fff;
-        }
-        body {
-            text-align: center;
-        }
-
         img {
             image-rendering: pixelated;
             image-rendering: -moz-crisp-edges;
@@ -52,63 +35,6 @@
             <button id="playBtn" type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="spinWheel()">Spin</button><br><button id="backBtn" type="button" style="color: #68C3E2; background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
         </div>
     </div>
-    <script>
-        window.alreadySpun = false;
-        const spins = [10, 20, 50, -15, -25, -35,  -100, -50, 100, 250, -1000, 1250]
-        const waitMs = ms => new Promise(res => setTimeout(res, ms));
-        async function spinWheel() {
-            if (window.alreadySpun) {} else {
-                window.alreadySpun = true;
-                document.getElementById('playBtn').style.display = "none";
-                document.getElementById('backBtn').style.display = "none";
-                
-                const xhr = new XMLHttpRequest();
-                xhr.open("GET", `/api/casino/spinner/spinWheel`, true);
-                xhr.withCredentials = true;
-
-                xhr.onreadystatechange = async () => {
-                if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                    const spinAPI = await JSON.parse(JSON.parse(xhr.responseText));
-                    const spin = spinAPI.spin;
-                    document.getElementById('wheel').className = "spinc" + spin;
-                    await waitMs(8015)
-                    if (spins[spin] > 0) {
-                        document.getElementById('result').innerHTML = 'You won ' +  Math.abs(spins[spin]) + ' points <br>'
-                    } else {
-                        document.getElementById('result').innerHTML = 'You lost ' +  Math.abs(spins[spin]) + ' points <br>'
-                    }
-                    document.getElementById('result').style.display = "inherit";
-                    document.getElementById('playBtn').style.display = "inherit";
-                    document.getElementById('backBtn').style.display = "inherit";
-                    window.alreadySpun = false;
-                } else if (xhr.status === 401) {
-                    console.log("401 unauth")
-                    window.location.href = "/login";
-                    return "401";
-                } else if (xhr.status === 400) {
-                    console.log("400 failure")
-                    return "400";
-                } else if (xhr.status === 500) {
-                    console.log("500 failure")
-                    return "500";
-                } else if (xhr.status === 403) {
-                    if (xhr.readyState === XMLHttpRequest.DONE) {
-                        console.log("403 access denied");
-                        document.getElementById('result').innerHTML = 'You have a balance of under -2000 points, you cannot gamble!';
-                        document.getElementById('result').style.display = "inherit";
-                        throw new Error('unable to gamble');
-                    }
-                } else {
-                    console.log("awaiting response")
-                }
-                }
-
-                xhr.send()
-            }
-        }
-        function goToHome() {
-            window.location.href = "/points";
-        }
-    </script>
+    <script src="js/casino_spin_client.min.js" type="text/javascript"></script>
 </body>
 </html>
