client render manage form

--- a/src/manage.html
+++ b/src/manage.html
@@ -39,35 +39,28 @@
     <script>
         themeHandle()
     </script>
-    <div class="container" id="search" style="display: <%= displaySearch %>;">
-        <!--flex is shown-->
+    <div class="container" id="search" style="display: flex;">
         <form>
-            <h4 style="color: red; display: <%= errorDisplay %>">
-                <%= errorMessage %>
-            </h4>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Manage Data</h4><br>
             <fieldset>
                 <label>Database: <br></label><br>
-                <select name="dbase">
+                <select id="db">
                     <option value="main">main</option>
                     <option value="pit">pit</option>
                 </select><br>
-                <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;">View Data</button><br>
+                <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" onclick="getData()" id="viewData">View Data</button><br>
                 <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
         </form>
         <br><br>
     </div>
-    <div class="container" id="results" style="display: <%= displayResults %>;">
-        <!--flex is shown-->
+    <div class="container" id="results" style="display: none;">
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Manage Data</h4><br>
-            <fieldset>
-                <%- resultsBody %>
-                    <!--buttons-->
-                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="removeURLParams()">New Search</button><br><button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+            <fieldset id="results">
+                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="newSearch()">New Search</button><br><button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
             <br><br>
         </div>
