--- a/src/manage.html
+++ b/src/manage.html
@@ -59,7 +59,7 @@
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Manage Data</h4><br>
-            <fieldset id="results">
+            <fieldset id="resultsInsert">
                     <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="newSearch()">New Search</button><br><button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
             <br><br>
